# pretty-plotly

./: README.md  pyproject.toml
src/pretty_plotly.egg-info/: PKG-INFO
src/simple_plotly.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
